rdw 767px: modified mmargin .main to prevent text from spilling over in .intr01

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -458,8 +458,9 @@ Hier vallen ook onder iPhone 6 (750px), Samsung Galaxy S2/S3 (720), Microsoft Lu
     width: 100%;
     height: 50%;
     display: block;
-/*Onderstaande oplossing om background img te resizen gevonden via Stack Overflow
-position center center is 50% horizontaal, 50% verticaal*/
+    margin-bottom: 10px;
+    /*Onderstaande oplossing om background img te resizen gevonden via Stack Overflow
+    position center center is 50% horizontaal, 50% verticaal*/
     background-repeat: no-repeat;
     background-position: top center;
     background-attachment: fixed;
